--- a/src/im/codechat/client/ui/components/ChatComponent.fxml
+++ b/src/im/codechat/client/ui/components/ChatComponent.fxml
@@ -2,53 +2,67 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
+<?import im.codechat.client.core.ui.ChatPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="im.codechat.client.ui.components.ChatComponent" >
-    <BorderPane>
-        <top>
-            <VBox prefHeight="186.0" prefWidth="488.0">
-                <BorderPane>
-                    <left>
-                        <Text text="Yemi" />
-                    </left>
-                    <right><HBox alignment="TOP_RIGHT">
-                        <Button text="Details" />
-                        <Button text="Conference" />
-                        <Button text="Upload file" />
-                        <Button text="History" />
-                        <Button text="Encryption" />
-                     <BorderPane.margin>
-                        <Insets bottom="10.0" />
-                     </BorderPane.margin>
-                     <padding>
-                        <Insets left="5.0" right="5.0" top="5.0" />
-                     </padding>
-                    </HBox></right>
-                </BorderPane>
-                    <TextArea prefHeight="170.0" prefWidth="468.0">
-               <VBox.margin>
-                  <Insets left="5.0" right="5.0" />
-               </VBox.margin></TextArea>
-            </VBox>
-        </top>
-        <center>
-            <AnchorPane prefWidth="478.0">
-            </AnchorPane>
-        </center>
-        <bottom>
-            <Pane prefWidth="478.0">
-                <TextArea fx:id="textMessageArea9" layoutX="0" layoutY="0" prefHeight="100.0" prefWidth="477.0" />
-            <BorderPane.margin>
-               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-            </BorderPane.margin>
-            </Pane>
-        </bottom>
-    </BorderPane>
-</AnchorPane>
+<ChatPane fx:id="rootPane" prefHeight="301.0" prefWidth="528.0" stylesheets="@../main/styles.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="im.codechat.client.ui.components.ChatComponent">
+    <VBox fillWidth="true" prefHeight="186.0" prefWidth="488.0" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="10">
+        <BorderPane>
+            <left>
+                <Label fx:id="paneContactLabel" text="Yemi" />
+            </left>
+            <right><HBox alignment="TOP_RIGHT">
+                <Button text="Details" />
+                <Button text="Conference" />
+                <Button text="Upload file" />
+                <Button text="History" />
+                <Button text="Encryption" />
+                <BorderPane.margin>
+                    <Insets bottom="10.0" />
+                </BorderPane.margin>
+                <padding>
+                    <Insets left="5.0" right="5.0" top="5.0" />
+                </padding>
+            </HBox></right>
+        </BorderPane>
+        <GridPane fx:id="chatArea" minHeight="0.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+            <!--<columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" />
+                <RowConstraints minHeight="10.0" />
+                <RowConstraints minHeight="10.0" />
+                <RowConstraints minHeight="10.0" />
+                <RowConstraints minHeight="10.0" />
+            </rowConstraints>
+            <children>
+
+                <Label styleClass="chat-bubble-inbound" GridPane.halignment="LEFT" GridPane.rowIndex="0">
+                    Hello, can I speak to you german colleague ?
+                </Label>
+                <Label styleClass="chat-bubble-time" GridPane.halignment="LEFT" GridPane.rowIndex="1">16:53:44</Label>
+                <Label styleClass="chat-bubble-outbound" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+                    Sure you can, please wait while I connect you to him
+                </Label>
+                <Label styleClass="chat-bubble-time" GridPane.halignment="RIGHT" GridPane.rowIndex="3">16:53:44</Label>
+                <Label styleClass="chat-bubble-default" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                    User has logged out
+                </Label>
+            </children>-->
+            <VBox.margin>
+            <Insets bottom="10.0" />
+            </VBox.margin>
+        </GridPane>
+        <TextArea fx:id="outboundMessageText" maxHeight="50" minHeight="50" prefHeight="50" />
+    </VBox>
+</ChatPane>
