--- a/src/im/codechat/client/ui/login/LoginView.fxml
+++ b/src/im/codechat/client/ui/login/LoginView.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane alignment="CENTER" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="275.0" vgap="10.0"
-          xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane alignment="CENTER" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="275.0" stylesheets="@../main/styles.css" vgap="10.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints />
         <ColumnConstraints />
@@ -32,12 +31,12 @@
                 <Font size="20.0" />
             </font></Text>
         <Label text="User Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="txtUsername" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="txtUsername" text="jide" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <PasswordField fx:id="txtPassword" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <PasswordField fx:id="txtPassword" text="jide" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <HBox alignment="BOTTOM_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="4">
             <children>
-                <Button fx:id="button" mnemonicParsing="false" onAction="#loginAction" text="Sign In" />
+                <Button fx:id="button" mnemonicParsing="false" onAction="#loginAction" styleClass="accent-button" text="Sign In" />
             </children>
         </HBox>
         <HBox alignment="TOP_CENTER" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="5">
