--- a/src/im/codechat/client/ui/main/AppView.fxml
+++ b/src/im/codechat/client/ui/main/AppView.fxml
@@ -7,14 +7,13 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeItem?>
-<?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -23,8 +22,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.ListView?>
-<AnchorPane styleClass="root" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="558.0" prefWidth="878.0" styleClass="root" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
         <BorderPane fx:id="containerGrid" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <top>
@@ -72,7 +70,7 @@
                                         <items>
                                             <FXCollections fx:factory="observableArrayList">
                                                 <String fx:value="Available" />
-                                                <String fx:value="Free to chat" />
+                                                <String fx:value="Free offerTo chat" />
                                                 <String fx:value="Busy" />
                                                 <String fx:value="Away" />
                                                 <String fx:value="Extended away" />
@@ -83,7 +81,7 @@
                            </VBox.margin>
                                     </ComboBox>
                                     <HBox>
-                                        <TextField HBox.hgrow="ALWAYS" />
+                                        <TextField HBox.hgrow="ALWAYS" styleClass="material" promptText="Seach contacts" />
                                         <Button alignment="TOP_RIGHT" styleClass="accent-button">
                                             <graphic>
                                                 <MaterialDesignIconView glyphName="MAGNIFY" glyphStyle="-fx-fill: white" size="14PX" />
@@ -98,11 +96,16 @@
 
                             </VBox>
                             <HBox fillHeight="true" GridPane.rowIndex="1">
-                                <TabPane style="-fx-background-color: white; " tabClosingPolicy="UNAVAILABLE" HBox.hgrow="ALWAYS">
+                                <TabPane id="master-tab" style="-fx-background-color: white; " tabClosingPolicy="UNAVAILABLE" HBox.hgrow="ALWAYS">
                                     <tabs>
                                         <Tab text="Contacts">
                                             <content>
                                                 <ListView fx:id="contactsListView" styleClass="contacts-list" />
+                                            </content>
+                                        </Tab>
+                                        <Tab text="Group">
+                                            <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                                             </content>
                                         </Tab>
                                         <Tab text="Conference">
