--- a/src/im/codechat/client/ui/login/LoginView.fxml
+++ b/src/im/codechat/client/ui/login/LoginView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -24,6 +25,7 @@
         <RowConstraints />
         <RowConstraints />
         <RowConstraints />
+        <RowConstraints />
     </rowConstraints>
     <children>
         <Text text="CoderChat" GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.rowIndex="0" GridPane.valignment="BOTTOM">
@@ -31,9 +33,9 @@
                 <Font size="20.0" />
             </font></Text>
         <Label text="User Name:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-        <TextField fx:id="txtUsername" text="jide" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="txtUsername" styleClass="material" text="jide" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Label text="Password:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <PasswordField fx:id="txtPassword" text="jide" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <PasswordField fx:id="txtPassword" styleClass="material" text="jide" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <HBox alignment="BOTTOM_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="4">
             <children>
                 <Button fx:id="button" mnemonicParsing="false" onAction="#loginAction" styleClass="accent-button" text="Sign In" />
@@ -44,7 +46,11 @@
                 <Label fx:id="status" textFill="#f20808" />
             </children>
         </HBox>
-
+        <HBox alignment="TOP_CENTER" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="6">
+            <children>
+                <ProgressIndicator fx:id="loginProgressIndicator" visible="false" />
+            </children>
+        </HBox>
     </children>
     <padding>
         <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
