--- a/src/main/resources/im/codechat/client/view/components/ChatComponent.fxml
+++ b/src/main/resources/im/codechat/client/view/components/ChatComponent.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
-<?import im.codechat.client.core.ui.control.ChatPane?>
+<?import im.codechat.client.core.ui.controls.ChatPane?>
 
 <AnchorPane fx:id="rootPane" prefHeight="301.0" prefWidth="528.0" stylesheets="@../main/styles.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="im.codechat.client.view.components.ChatComponent">
     <VBox fillWidth="true" prefHeight="186.0" prefWidth="488.0" AnchorPane.bottomAnchor="20" AnchorPane.leftAnchor="20" AnchorPane.rightAnchor="20" AnchorPane.topAnchor="10">
